--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="cards">
-            <div class="imagen">
+            <div id="img1" class="imagen">
             </div>
             <div class="card-title">
                 Card Title
@@ -20,22 +20,22 @@
             </div>
         </div>
         <div class="cards">
-            <div class="imagen">
+            <div id="img2" class="imagen" >
             </div>
-            <div class="card-title">
+            <div id="card-title2" class="card-title">
                 Card Title
             </div>
-            <div class="card-description">
+            <div id="card-description2" class="card-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
         </div>
         <div class="cards">
-            <div class="imagen">
+            <div id="img3" class="imagen">
             </div>
-            <div class="card-title">
+            <div id="card-title3" class="card-title">
                 Card Title
             </div>
-            <div class="card-description">
+            <div id="card-description3"class="card-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
         </div>
