--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <div class="cards">
-            <div id="img1" class="imagen">
+            <div class="imgcenter">
+                <div id="img1" class="imagen"></div>
             </div>
             <div class="card-title">
                 Card Title
@@ -18,9 +19,11 @@
             <div class="card-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
+            <a href="producto/producto.html" class="card-button">Ver más...</a>
         </div>
         <div class="cards">
-            <div id="img2" class="imagen" >
+            <div class="imgcenter">
+                <div id="img2" class="imagen" ></div>
             </div>
             <div id="card-title2" class="card-title">
                 Card Title
@@ -28,9 +31,11 @@
             <div id="card-description2" class="card-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
+            <a href="producto/producto.html" class="card-button">Ver más...</a>
         </div>
         <div class="cards">
-            <div id="img3" class="imagen">
+            <div class="imgcenter">
+                <div id="img3" class="imagen"></div>
             </div>
             <div id="card-title3" class="card-title">
                 Card Title
@@ -38,6 +43,7 @@
             <div id="card-description3"class="card-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
+            <a href="producto/producto.html" class="card-button">Ver más...</a>
         </div>
     </div>
 </body>
