--- a/index.html
+++ b/index.html
@@ -3,49 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> E - COMMERCE </title>
+    <title>E - COMMERCE</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <header id="menu-container"></header>
+
     <div class="container">
         <div class="cards">
             <div class="imgcenter">
                 <div id="img1" class="imagen"></div>
             </div>
-            <div class="card-title">
-                Card Title
-            </div>
-            <div class="card-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </div>
-            <a href="producto/producto.html" class="card-button">Ver más...</a>
+            <div class="card-title">Card Title</div>
+            <div class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <a href="producto/producto.html?prod=8" class="card-button">Ver más...</a>
         </div>
         <div class="cards">
             <div class="imgcenter">
-                <div id="img2" class="imagen" ></div>
+                <div id="img2" class="imagen"></div>
             </div>
-            <div id="card-title2" class="card-title">
-                Card Title
-            </div>
-            <div id="card-description2" class="card-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </div>
-            <a href="producto/producto.html" class="card-button">Ver más...</a>
+            <div id="card-title2" class="card-title">Card Title</div>
+            <div id="card-description2" class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <a href="producto/producto.html?prod=9" class="card-button">Ver más...</a>
         </div>
         <div class="cards">
             <div class="imgcenter">
                 <div id="img3" class="imagen"></div>
             </div>
-            <div id="card-title3" class="card-title">
-                Card Title
-            </div>
-            <div id="card-description3"class="card-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </div>
-            <a href="producto/producto.html" class="card-button">Ver más...</a>
+            <div id="card-title3" class="card-title">Card Title</div>
+            <div id="card-description3" class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+            <a href="producto/producto.html?prod=10" class="card-button">Ver más...</a>
         </div>
     </div>
 </body>
 <script src="./index.js"></script>
+<script src="./navbar.js"></script>
 </html>
