--- a/producto/producto.html
+++ b/producto/producto.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> E - COMMERCE </title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Detalles del Producto</title>
+    <style href="styles.css"></style>
 </head>
 <body>
-    <div class="">
-        <div class="container">
-            <div id="producto-container"></div>
-        </div>
-    </div>
-    <script src="./producto.js"></script>
+    <h1 id="product-name"></h1>
+    <p id="product-price"></p>
+    <p id="product-stock"></p>
+    <div id="product-image"></div>
+
+    <script src="producto.js"></script>
 </body>
 </html>
