--- a/index.html
+++ b/index.html
@@ -8,33 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <header id="menu-container"></header>
-
-    <div class="container">
-        <div class="cards">
-            <div class="imgcenter">
-                <div id="img1" class="imagen"></div>
-            </div>
-            <div class="card-title">Card Title</div>
-            <div class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-            <a href="producto/producto.html?prod=8" class="card-button">Ver más...</a>
+    <navbar class="navbar">
+        <header class="menu" id="menu-container"></header>
+        <div>
+            <input class="finder" placeholder="Buscar..."></input>
+            <button class="filtrar">Filtrar</button>
+            <button class="borrar">Borrar</button>
         </div>
-        <div class="cards">
-            <div class="imgcenter">
-                <div id="img2" class="imagen"></div>
-            </div>
-            <div id="card-title2" class="card-title">Card Title</div>
-            <div id="card-description2" class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-            <a href="producto/producto.html?prod=9" class="card-button">Ver más...</a>
-        </div>
-        <div class="cards">
-            <div class="imgcenter">
-                <div id="img3" class="imagen"></div>
-            </div>
-            <div id="card-title3" class="card-title">Card Title</div>
-            <div id="card-description3" class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-            <a href="producto/producto.html?prod=10" class="card-button">Ver más...</a>
-        </div>
+    </navbar>
+    
+    <div class="container" id="products-container">
     </div>
 </body>
 <script src="./index.js"></script>
