--- a/producto/producto.html
+++ b/producto/producto.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del Producto</title>
-    <style href="styles.css"></style>
+    <style>
+        #product-image {
+            width: 300px; 
+            height: 300px; 
+            background-size: cover; 
+            background-position: center; 
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body>
     <h1 id="product-name"></h1>
+    <div id="product-image"></div>
     <p id="product-price"></p>
     <p id="product-stock"></p>
-    <div id="product-image"></div>
-
     <script src="producto.js"></script>
 </body>
 </html>
