sprint3 listo, hacer los diseños

--- a/e-commerce_costandopulo_leon/cart/cart.html
+++ b/e-commerce_costandopulo_leon/cart/cart.html
@@ -40,7 +40,9 @@
       </div>
       <div class="col-sm-6">
        <div class="text-sm-end mt-2 mt-sm-0">
-        <a id="checkout-link" href=""><button id="btn-checkout" class="btn btn-success">Confirmar Compra</button></a>
+        <a id="checkout-link" href="">
+          <div id="btn-checkout" class="btn btn-success" >Confirmar Compra</div>
+        </a>
        </div>
        <button class="clearCart" id="btn-clear">Limpiar carrito</button>
       </div>
