--- a/e-commerce_costandopulo_leon/index/index.html
+++ b/e-commerce_costandopulo_leon/index/index.html
@@ -8,6 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body id="body">
+    <div class="loader">
+        <div class="loaderVacio">
+            <div class="loaderLleno"></div>
+        </div>
+    </div>
     <navbar class="navbar" id="navbar">
     </navbar>
     
